--- a/pages/EDU_001_교육과정 리스트.html
+++ b/pages/EDU_001_교육과정 리스트.html
@@ -74,6 +74,58 @@
                 <a href="" class="active">전체</a>
                 <a href="">팀장 교육</a>
                 <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a> <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
                 <a href="">CEO 교육 </a>
               </div>
               <div class="one-curriculum-list">
@@ -90,7 +142,7 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
@@ -116,7 +168,7 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
@@ -141,58 +193,7 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
-                        <strong>250</strong>
-                      </p>
-                    </div>
-                    <div class="one-curriculum-list-item__review">
-                      <p>
-                        후기:
-                        <strong>6</strong>
-                      </p>
-                    </div>
-                  </div>
-                </a>
-                <a href="" class="one-curriculum-list-item">
-                  <div class="one-curriculum-list-item__thumb">
-                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                    <img src="./../assets/images/thumb01.svg" alt="" />
-                  </div>
-                  <div class="one-curriculum-list-item__title">
-                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
-                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
-                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
-                  </div>
-                  <div class="one-curriculum-list-item__foot">
-                    <div class="one-curriculum-list-item__info">
-                      <p>수강생: <strong>50</strong></p>
-                      <p>
-                        <i class="ico-like"></i>
-                        <strong>250</strong>
-                      </p>
-                    </div>
-                    <div class="one-curriculum-list-item__review">
-                      <p>
-                        후기:
-                        <strong>6</strong>
-                      </p>
-                    </div>
-                  </div>
-                </a>
-                <a href="" class="one-curriculum-list-item">
-                  <div class="one-curriculum-list-item__thumb">
-                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                  </div>
-                  <div class="one-curriculum-list-item__title">
-                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
-                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
-                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
-                  </div>
-                  <div class="one-curriculum-list-item__foot">
-                    <div class="one-curriculum-list-item__info">
-                      <p>수강생: <strong>50</strong></p>
-                      <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
@@ -218,7 +219,7 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
@@ -243,7 +244,7 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
@@ -269,7 +270,58 @@
                     <div class="one-curriculum-list-item__info">
                       <p>수강생: <strong>50</strong></p>
                       <p>
-                        <i class="ico-like"></i>
+                        <i class="ico-like-active"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like-active"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="./../assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like-active"></i>
                         <strong>250</strong>
                       </p>
                     </div>
