--- a/pages/EDU_002_교육신청_상세페이지.html
+++ b/pages/EDU_002_교육신청_상세페이지.html
@@ -93,7 +93,7 @@
                       <div class="one-detail-head__info">
                         <p>수강생: <strong>50</strong></p>
                         <p>
-                          <i class="ico-like"></i>
+                          <i class="ico-like-active"></i>
                           <strong>250</strong>
                         </p>
                       </div>
@@ -103,7 +103,13 @@
                         수강신청
                       </button>
                       <button type="button" class="btn btn-secondary">
-                        <i class="ico-bookmark"></i> 관심
+                        <i class="ico-bookmark"></i>
+                        <i class="ico-bookmark-active"></i> 관심
+                      </button>
+
+                      <button type="button" class="btn btn-secondary">
+                        <i class="ico-like"></i
+                        ><i class="ico-like-active"></i> 좋아요
                       </button>
                     </div>
                   </div>
