--- a/pages/EDU_MYPAGE_003_나의학습방_관심과정.html
+++ b/pages/EDU_MYPAGE_003_나의학습방_관심과정.html
@@ -91,7 +91,7 @@
                           <strong>50</strong>
                         </p>
                         <p>
-                          <i class="ico-like"></i>
+                          <i class="ico-like-active"></i>
                           <strong>250</strong>
                         </p>
                       </div>
@@ -130,7 +130,7 @@
                           <strong>50</strong>
                         </p>
                         <p>
-                          <i class="ico-like"></i>
+                          <i class="ico-like-active"></i>
                           <strong>250</strong>
                         </p>
                       </div>
