--- a/pages/MAIN_001_PC_로그인 전.html
+++ b/pages/MAIN_001_PC_로그인 전.html
@@ -8,6 +8,11 @@
       href="../assets/css/swiper-bundle.min.css"
       type="text/css"
     />
+    <link
+      rel="stylesheet"
+      href="../assets/css/sweetalert2.min.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="../assets/css/common.css" type="text/css" />
 
     <script src="../assets/js/jquery.min.js"></script>
@@ -15,6 +20,7 @@
     <script src="../assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
     <script src="../assets/js/include.js"></script>
     <script src="../assets/js/swiper-bundle.min.js"></script>
+    <script src="../assets/js/sweetalert2.all.min.js"></script>
   </head>
   <body>
     <div class="one">
@@ -94,7 +100,7 @@
                             <div class="one-curriculum-list-item__info">
                               <p>수강생: <strong>50</strong></p>
                               <p>
-                                <i class="ico-like"></i>
+                                <i class="ico-like-active"></i>
                                 <strong>250</strong>
                               </p>
                             </div>
@@ -123,7 +129,7 @@
                             <div class="one-curriculum-list-item__info">
                               <p>수강생: <strong>50</strong></p>
                               <p>
-                                <i class="ico-like"></i>
+                                <i class="ico-like-active"></i>
                                 <strong>250</strong>
                               </p>
                             </div>
@@ -158,7 +164,7 @@
                             <div class="one-curriculum-list-item__info">
                               <p>수강생: <strong>50</strong></p>
                               <p>
-                                <i class="ico-like"></i>
+                                <i class="ico-like-active"></i>
                                 <strong>250</strong>
                               </p>
                             </div>
@@ -187,7 +193,7 @@
                             <div class="one-curriculum-list-item__info">
                               <p>수강생: <strong>50</strong></p>
                               <p>
-                                <i class="ico-like"></i>
+                                <i class="ico-like-active"></i>
                                 <strong>250</strong>
                               </p>
                             </div>
@@ -341,6 +347,7 @@
         right: 0;
         padding: 10px;
         background: rgba(0, 0, 0, 0.5);
+        z-index: 100000;
       "
     >
       <button
@@ -351,6 +358,29 @@
       >
         modal01
       </button>
+      <br /><br />
+      <button type="button" class="btn btn-primary" id="alertBtn">alert</button>
+      <br /><br />
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal02"
+      >
+        메인 공지 팝업
+      </button>
+
+      <script>
+        document
+          .getElementById('alertBtn')
+          .addEventListener('click', function () {
+            Swal.fire({
+              title: '공지사항',
+              text: '법무법인 태평양의 최신 공지사항을 확인하세요.',
+              confirmButtonText: '확인',
+            });
+          });
+      </script>
     </div>
 
     <!-- Modal -->
@@ -367,32 +397,75 @@
             ></button>
           </div>
           <div class="modal-body">
-            <div class="mb-4" style="font-size: 24px">
-              <strong>
-                CODEF API 도입으로<br />
-                다양한 경영정보 제공이 가능해졌어요.
-              </strong>
+            <div class="modal-editor">
+              <div class="mb-4" style="font-size: 24px">
+                <strong>
+                  CODEF API 도입으로<br />
+                  다양한 경영정보 제공이 가능해졌어요.
+                </strong>
+              </div>
+              <div>
+                진형세무회계의 경정청구 자동화 서비스 ‘택스리서치’의 주요 기능인
+                ‘국세 및 지방세 납부내역을 조회’하는데 API 사용이 필수적이라는
+                것을 알게 되었습니다. 헥토데이터를 통해 필요한 API 대부분을
+                적용할 수 있었고, 고객사의 니즈에 적절히 대응해 준다는
+                추천 후기에 헥토데이터의 CODEF API를 이용하게 되었습니다.<br /><br />
+                지난 5년간 과다 납부한 국세와 지방세를 자동으로 산출하기
+                위해서는 10개가 넘는 세금 관련 API 연결이 필요했습니다.
+                헥토데이터는 API 상품이 상세하고 다양하게 준비되어 있어서 필요한
+                기능을 손쉽게 구현할 수 있었습니다.<br /><br />
+                 기존에는 환급금을 확인하려면 복잡한 서식과 여러 가지 신고
+                서류를 세무회계 전문가에게 전달해야 했지만, 이제는
+                택스리서치에서 환급금 확인부터 경정청구 위임 의뢰까지 한 번에 할
+                수 있습니다. 인증을 거치면 헥토데이터 API를 통해 고객이 홈택스
+                또는 위택스에 신고한 국세, 지방세 관련 데이터를 안전하게
+                전송받을 수 있고, 전송받은 데이터는 진형세무회계에서 다년간
+                축적한 경정청구 노하우을 담은 연산식을 거쳐 예상 환급금으로
+                산출되어 고객 화면에 나타납니다. 금액이 연산되는 30초 남짓 동안
+                고객들은 자사와 비슷한 매출 규모를 가진 회사가 1년간 평균 얼마의
+                세금을 감면받았는지 함께 확인할 수 있습니다.
+              </div>
             </div>
-            <div>
-              진형세무회계의 경정청구 자동화 서비스 ‘택스리서치’의 주요 기능인
-              ‘국세 및 지방세 납부내역을 조회’하는데 API 사용이 필수적이라는
-              것을 알게 되었습니다. 헥토데이터를 통해 필요한 API 대부분을 적용할
-              수 있었고, 고객사의 니즈에 적절히 대응해 준다는 추천 후기에
-              헥토데이터의 CODEF API를 이용하게 되었습니다.<br /><br />
-              지난 5년간 과다 납부한 국세와 지방세를 자동으로 산출하기 위해서는
-              10개가 넘는 세금 관련 API 연결이 필요했습니다. 헥토데이터는 API
-              상품이 상세하고 다양하게 준비되어 있어서 필요한 기능을 손쉽게
-              구현할 수 있었습니다.<br /><br />
-               기존에는 환급금을 확인하려면 복잡한 서식과 여러 가지 신고 서류를
-              세무회계 전문가에게 전달해야 했지만, 이제는 택스리서치에서 환급금
-              확인부터 경정청구 위임 의뢰까지 한 번에 할 수 있습니다. 인증을
-              거치면 헥토데이터 API를 통해 고객이 홈택스 또는 위택스에 신고한
-              국세, 지방세 관련 데이터를 안전하게 전송받을 수 있고, 전송받은
-              데이터는 진형세무회계에서 다년간 축적한 경정청구 노하우을 담은
-              연산식을 거쳐 예상 환급금으로 산출되어 고객 화면에 나타납니다.
-              금액이 연산되는 30초 남짓 동안 고객들은 자사와 비슷한 매출 규모를
-              가진 회사가 1년간 평균 얼마의 세금을 감면받았는지 함께 확인할 수
-              있습니다.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
+              닫기
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal02" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">공지사항</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-4">
+              <img src="https://picsum.photos/1200/600" alt="" />
+            </div>
+            <div class="modal-editor">
+              법무법인 태평양 – 최근 주요 공지 요약<br />
+              • ‘2025 로펌 컨수머 리포트’ 전 분야 상위권 기록, 2년 연속 최고
+              평가<br />
+              주요 법률 정보 매체인 「법률신문·IHCF·한국사내변호사회」 공동기획
+              ‘2025 로펌 컨수머 리포트’에서 법무법인 태평양이 전 분야 상위권을
+              기록하며 2년 연속 최고 평가를 받았습니다. ￼ (2025‑05‑12)<br />
+              • ‘거버넌스 솔루션 센터(Governance Solution Center)’ 출범<br />
+              기업 지배구조, 주주간 분쟁, 자본시장 규제 등에 종합 대응할 수 있는
+              ‘거버넌스 솔루션 센터’를 신설했습니다. ￼ (2025‑07‑03)<br />
+              • ‘노란봉투법 이후 노사관계 전망과 대응’ 세미나 성료<br />
+              인사노무그룹 주최 온·오프라인 세미나로, 노사관계 변화에 대한
+              전략적 대응 방안을 논의하며 높은 관심 속에 마무리되었습니다. ￼
+              (2025-08-26)
             </div>
           </div>
           <div class="modal-footer">
