--- a/pages/index.html
+++ b/pages/index.html
@@ -43,6 +43,13 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="EDU_001_교육과정 리스트_none.html"
+                      >EDU_001_교육과정 리스트_none</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="EDU_002_교육신청_상세페이지.html"
                       >EDU_002_교육신청_상세페이지</a
                     >
