수정사항 반영

--- a/pages/EDU_002_교육신청_상세페이지.html
+++ b/pages/EDU_002_교육신청_상세페이지.html
@@ -86,23 +86,8 @@
                     <div class="one-detail-head__text">
                       <div class="one-detail-head__score">
                         <p>
-                          <!-- 
-                          만족도 1점 10%
-                          만족도 1.5점 30%
-                          만족도 2점 40%
-                          만족도 2.5점 50%
-                          만족도 3점 60%
-                          만족도 3.5점 70%
-                          만족도 4점 80%
-                          만족도 4.5점 90%
-                          만족도 5점 100%
-                          -->
-                          <span class="one-score"
-                            ><span
-                              class="one-score-value"
-                              style="width: 90%"
-                            ></span
-                          ></span>
+                          만족도
+                          <span class="one-score one-score--03-5"></span>
                           <strong>96%(10명)</strong>
                         </p>
                       </div>
