수정사항 반영

--- a/pages/EDU_002_교육신청_상세페이지.html
+++ b/pages/EDU_002_교육신청_상세페이지.html
@@ -108,9 +108,17 @@
                         <i class="ico-bookmark-active"></i> 관심
                       </button>
 
-                      <button type="button" class="btn btn-secondary">
-                        <i class="ico-like"></i
-                        ><i class="ico-like-active"></i> 좋아요
+                      <button
+                        type="button"
+                        class="btn btn-outline-secondary px-3"
+                      >
+                        <i class="ico-like-active"></i>
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-outline-secondary px-3"
+                      >
+                        <i class="ico-like"></i>
                       </button>
                     </div>
                   </div>
@@ -161,6 +169,20 @@
                       </button>
                     </li>
                   </ul>
+
+                  <div class="one-detail-view">
+                    <div class="one-detail-view-start"></div>
+                    <div class="one-detail-view-end">
+                      <button type="button" class="active">
+                        <i class="ico-list"></i>
+                      </button>
+                      <hr />
+                      <button type="button">
+                        <i class="ico-calendar"></i>
+                      </button>
+                    </div>
+                  </div>
+
                   <div class="tab-content" id="myTabContent">
                     <div
                       class="tab-pane fade show active"
