--- a/pages/EDU_MYPAGE_001_1_나의학습방_학습현황[카드형].html
+++ b/pages/EDU_MYPAGE_001_1_나의학습방_학습현황[카드형].html
@@ -67,7 +67,20 @@
                 <strong>학습현황</strong>
               </div>
               <div class="one-learningstatus">
-                <div class="one-learningstatus__title">학습현황</div>
+                <div class="one-detail-view">
+                  <div class="one-detail-view-start">
+                    <div class="one-learningstatus__title">학습현황</div>
+                  </div>
+                  <div class="one-detail-view-end">
+                    <button type="button">
+                      <i class="ico-list"></i>
+                    </button>
+                    <hr />
+                    <button type="button" class="active">
+                      <i class="ico-card"></i>
+                    </button>
+                  </div>
+                </div>
                 <div class="one-learningstatus-card">
                   <div class="one-learningstatus-item">
                     <div class="one-learningstatus-item__thumb">
