--- a/pages/EDU_001_교육과정 리스트.html
+++ b/pages/EDU_001_교육과정 리스트.html
@@ -35,7 +35,7 @@
                 <strong>교육과정</strong>
                 <p>원하는 교육과정을 찾아보세요.</p>
               </div>
-              <div class="one-page-head-menu">
+              <div class="one-page-head-menu one-page-head-menu--2">
                 <a href="" class="active">
                   <i class="ico-CheckAll"></i>
                   <p>전체</p>
