--- a/pages/test.html
+++ b/pages/test.html
@@ -29,7 +29,7 @@
 
     <script src="/static/user/assets/js/jquery.min.js"></script>
     <script src="/static/user/assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
-    <script src="http://demo-renew.onesnc.co.kr/static/user/assets/js/common.js"></script>
+    <script src="https://frontlab-kr.github.io/onesnc-user/assets/js/common.js"></script>
     <script src="/static/user/assets/js/include.js"></script>
 
 
