--- a/pages/test.html
+++ b/pages/test.html
@@ -20,28 +20,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/static/vendors/sweetalert2/sweetalert2.css" rel="stylesheet">
-    <link href="/static/vendors/videojs/video-js.css" rel="stylesheet">
+    <link href="http://demo-renew.onesnc.co.kr/static/vendors/sweetalert2/sweetalert2.css" rel="stylesheet">
+    <link href="http://demo-renew.onesnc.co.kr/static/vendors/videojs/video-js.css" rel="stylesheet">
 
     <!-- <link rel="stylesheet" href="/static/user/assets/css/common.css" type="text/css" /> -->
     <link rel="stylesheet" href="https://frontlab-kr.github.io/onesnc-user/assets/css/common.css" type="text/css">
 
 
-    <script src="/static/user/assets/js/jquery.min.js"></script>
-    <script src="/static/user/assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="http://demo-renew.onesnc.co.kr/static/user/assets/js/jquery.min.js"></script>
+    <script src="http://demo-renew.onesnc.co.kr/static/user/assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
     <script src="https://frontlab-kr.github.io/onesnc-user/assets/js/common.js"></script>
-    <script src="/static/user/assets/js/include.js"></script>
+    <script src="http://demo-renew.onesnc.co.kr/static/user/assets/js/include.js"></script>
 
 
 
-    <script src="/static/vendors/moment/moment.min.js"></script>
-	<script src="/static/vendors/sweetalert2/sweetalert2.min.js"></script>
+    <script src="http://demo-renew.onesnc.co.kr/static/vendors/moment/moment.min.js"></script>
+	<script src="http://demo-renew.onesnc.co.kr/static/vendors/sweetalert2/sweetalert2.min.js"></script>
 
-    <script src="/static/common_js.js"></script>
+    <script src="http://demo-renew.onesnc.co.kr/static/common_js.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
 	<!-- video.js -->
-	<script src="/static/vendors/videojs/video.min.js"></script>
+	<script src="http://demo-renew.onesnc.co.kr/static/vendors/videojs/video.min.js"></script>
 
 	<style>
             /* Change all text and icon colors in the player. */
