--- a/pages/test.html
+++ b/pages/test.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://frontlab-kr.github.io/onesnc-user/assets/css/common.css" type="text/css">
 
 
-    <script src="http://demo-renew.onesnc.co.kr/static/user/assets/js/jquery.min.js"></script>
+    <script src="https://frontlab-kr.github.io/onesnc-user/assets/js/jquery.min.js"></script>
     <script src="http://demo-renew.onesnc.co.kr/static/user/assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
     <script src="https://frontlab-kr.github.io/onesnc-user/assets/js/common.js"></script>
     <script src="http://demo-renew.onesnc.co.kr/static/user/assets/js/include.js"></script>
