본인인증 추가

--- a/pages/index.html
+++ b/pages/index.html
@@ -170,6 +170,13 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="CMM_2_회원가입_본인인증.html"
+                      >CMM_2_회원가입_본인인증</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="CMM_3_아이디찾기.html">CMM_3_아이디찾기</a>
                   </td>
                 </tr>
