--- a/pages/MAIN_001_PC_로그인 전.html
+++ b/pages/MAIN_001_PC_로그인 전.html
@@ -29,7 +29,7 @@
       <!-- //header -->
 
       <main id="content">
-        <div class="one-main">
+        <div class="one-main bg-02 bg-none">
           <div class="one-main-head">
             <div class="one-contents">
               <div class="one-main-quick">
