--- a/pages/test.html
+++ b/pages/test.html
@@ -24,7 +24,7 @@
     <link href="http://demo-renew.onesnc.co.kr/static/vendors/videojs/video-js.css" rel="stylesheet">
 
     <!-- <link rel="stylesheet" href="/static/user/assets/css/common.css" type="text/css" /> -->
-    <link rel="stylesheet" href="https://frontlab-kr.github.io/onesnc-user/assets/css/common.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/common.css" type="text/css">
 
 
     <script src="https://frontlab-kr.github.io/onesnc-user/assets/js/jquery.min.js"></script>
